<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">PaintMobile3D</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="selected_color_name">Seleted Color</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">pm<b>3D</b></string>
    
    <string name="pref_application">Application</string>
    <string name="pref_about">About</string>
    
    <string name="pref_title_camera">Camera</string>
    <string name="pref_title_gyro">Gyroscope</string>
    <string name="pref_title_accelero">Calibrate Accelerometer</string>
    <string name="pref_title_dev_info">Developer Info</string>
    <string name="pref_title_github">GitHub</string>

</resources>
