<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_application" >
       <SwitchPreference
        android:defaultValue="true"
        android:key="setting_camera"
        android:title="@string/pref_title_camera" />
    
    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_gyro"
        android:title="@string/pref_title_gyro" />
    
    <Preference
        android:title="@string/pref_title_accelero" />
    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_about" >
        <Preference 
            android:title="@string/pref_title_dev_info" />
        <Preference 
            android:title="@string/pref_title_github" 
            android:key="setting_github" />	
        />
    </PreferenceCategory>

</PreferenceScreen>